
	* Move theme hash from efreet_icon.c to efreet_cache.c
	* Don't free data returned by efreet_util_cache_names
	* Add free callback to eet hashes
	* Remove unneeded header
	* Check if pattern equals "*" before doing pattern match
	* Remove EAPI from efreet_home_dir_get
	* Make efreet_cache_icon_theme_free only used in efreet_cache.c static
	* Move struct only used for cache to efreet_cache_private.h

2011-02-10  Sebastian Dransfeld

	* Move all eet cache handling to efreet_cache.c
	* Free hashes on init error
	* efreet_cache_icon -> efreet_icon for functions in efreet_icon.c
	* Fix memleak in desktop cache create
	* Pass dirs to desktop cache process as arguments
	* Delay cache recreation with a timer
	* Move desktop cache to efreet_cache.c, and cache all requests which
	  hit the eet cache

2011-03-18  Mike Blumenkrantz

        * Use eina_log more effectively

2011-04-04  Tom Hacohen (TAsn)

	* Fixed uri encoding when opening files.

2011-08-16  Sebastian Dransfeld

	* Always rebuild cache from scratch when needed, but rely on correct
	spec behaviour to check for theme changes. This will considerably
	speed up the cache process when there is no change, and improve the
	correctness of the cache when changes occur. For example didn't the
	previous behaviour handle file removal gracefully.

2011-08-16  Sebastian Dransfeld

	* Save whether cache changed in update file, and propagate to update
	event.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2012-01-19 Carsten Haitzler (The Rasterman)

        * use eina_file_direct_ls not opendir()

2012-01-19 Jérôme Pinot

        * Documentation fixes.

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-05-11 Cedric Bail

	* Faster loading of mime type.

2012-06-25 Sebastian Dransfeld

        * Added efreet_lang_reset() to reset language dependent variables and caches

2012-06-25 Sebastian Dransfeld

        * Support XDG_DESKTOP_DIR and read user-dirs.dirs